Make draft more visible for new invoices. Fix labels UX. Failed check under payments.

--- a/app/assets/stylesheets/objects/_invoice.scss
+++ b/app/assets/stylesheets/objects/_invoice.scss
@@ -184,6 +184,12 @@
     @include media-breakpoint-up(sm) {
       display: inline-block;
     }
+
+    + .checkbox-inline {
+      display: block;
+      padding-left: 0;
+      margin-top: 1rem;
+    }
   }
 }
 
